--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -15,14 +15,14 @@ Notable advancements in catalysis have led to the production of plastics, pharma
 Several new challenges have emerged in the field of catalysis related to reducing environmental impact, and developing sustainable processes.
 First, environmental challenges concern minimising and/or managing by-products, reducing contamination in effluents/wastewaters, using sustainable sources of raw materials, and energy supplies \parencite{Ludwig2017, Lange2021}.
 Secondly, economical challenges imply using cheaper, readily available raw materials, increased productivity, and decreased lag-time between discovery to commercialisation \parencite{Keisuke2019, Gunay2021}.
-For example, recent studies suggest that alternative, more economical catalysts, such as non-noble metals, and other derived metal-based compounds, need to be tested as possible substitutes for the most frequently used noble metals, which are very efficient but expensive \parencite{Zhong2021, Ruan2022}.
+For example, recent studies suggest that alternative, more economical catalysts, such as non-noble metals, and other derived metal-based compounds, must be tested as possible substitutes for the most frequently used noble metals, very efficient but expensive \parencite{Zhong2021, Ruan2022}.
 For green catalysis, the best material it not only the cheapest but most importantly the least impactful on the environment, e.g. in terms of material extraction, life span, and selectivity towards reducing pollutants and greenhouses gases \parencite{Lange2021}.
 
 Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{Ahmad2015}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
 Challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxic gases and nanoparticles \parencite{WHOAirPollution, Heck2001, Gandhi2003}.
 Some of the major air pollutants such as nitrogen oxides, (\ce{NO_x}), and particulate matter (PM) are emitted by road traffic (\qty{65}{\percent} of \ce{NO_x}, \qty{\approx 35}{\percent} of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhabitants.
 To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to \ce{NO_2} concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the World Health Organisation (WHO) recommendations for PM$_{2.5}$ \parencite{AirParis}.
-Air quality is the main environmental concern of Ile-de-France residents (\qty{65}{\percent} of total mentions) ahead of climate change (\qty{63}{\percent}) and food (\qty{38}{\percent} - \cite{AirParis}).
+Air quality is the main environmental concern of Île-de-France residents (\qty{65}{\percent} of total mentions) ahead of climate change (\qty{63}{\percent}) and food (\qty{38}{\percent} - \cite{AirParis}).
 Diesel engines are also used in the heavy industry impacting the surrounding areas in terms of atmosphere quality.
 
 \section{The oxidation of ammonia}
@@ -31,7 +31,7 @@ Diesel engines are also used in the heavy industry impacting the surrounding are
 
 \epigraph{Today, about \qty{50}{\percent} of the world population relies on nitrogen-based fertilisers to produce the food necessary to their alimentation.}%{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
 
-The story of ammonia begins in the early $20^{th}$ century with the discovery in 1902 of the Ostwald process that permitted the synthesis of fertilisers from the oxidation of ammonia \parencite{Ostwald1902, Ostwald1902a}.
+The story of ammonia begins in the early $20^{th}$ century with the discovery in 1902 of the Ostwald process that permitted the synthesis of nitric acid from the oxidation of ammonia \parencite{Ostwald1902, Ostwald1902a}.
 Wilhelm Ostwald later received the Nobel price in 1909 \textit{"in recognition of his work on catalysis and for his investigations into the fundamental principles governing chemical equilibria and rates of reaction"}.
 
 Seven years after the discovery, in 1909, Fritz Haber designed a process for the synthesis of ammonia which was later improved by Carl Bosch.
@@ -126,7 +126,8 @@ Reactions \ref{eq:AmmoniaOxidationNitrogen}, \ref{eq:AmmoniaOxidationNitrousOxid
 \end{align}
 
 The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the Ostwald process stem from the production of \ce{NO} \textit{via} the first stage, \textit{i.e.} the oxidation of ammonia (eq. \ref{eq:AmmoniaOxidationNitricOxide}).
-Nitrogen dioxide (\nitrogendioxide) is produced from \ce{NO} which then reacts with water to form nitric acid, an important actor in multiple industrial process (tab. \ref{tab:NitrogenGases}), including fertilisers such as ammonium nitrate (eq. \ref{eq:AmmoniumNitrate}).
+Nitrogen dioxide (\nitrogendioxide) is produced from \ce{NO} which then reacts with water in liquid phase to form nitric acid, an important actor in multiple industrial processes (tab. \ref{tab:NitrogenGases}).
+Nitric acid is for example used to produce fertilisers such as ammonium nitrate (eq. \ref{eq:AmmoniumNitrate}).
 
 \begin{align}
     \label{eq:AmmoniumNitrate}
@@ -156,7 +157,7 @@ In all cases, particular focus is on two products of the reaction, namely, \ce{N
     \label{fig:Products}
 \end{figure}
 
-When aiming at the production of nitric acid, selectivity towards the production of \ce{NO} must be achieved during the ammonia oxidation (eq. \ref{eq:AmmoniaOxidationNitrousOxide}), \textit{i.e.} during the first stage of the Ostwald process.
+When aiming at the production of nitric acid, selectivity towards the production of \ce{NO} must be achieved during the ammonia oxidation (eq. \ref{eq:AmmoniaOxidationNitricOxide}), \textit{i.e.} during the first stage of the Ostwald process.
 The production of nitrogen oxide is possible \textit{via} direct methods, \textit{i.e.} by reacting nitrogen and oxygen above \qty{2000}{\degreeCelsius}.
 However, such processes are not used due to their low energy efficiency and product selectivity.
 This is at the origin of the selective, heterogeneous catalytic oxidation of ammonia towards the production of nitrogen oxide \parencite{Hatscher2008}.
@@ -209,7 +210,7 @@ High oxygen coverage on Pt(100) has shown to reduce the production of nitrogen, 
 
 Asscher et al. \parencite*{Asscher1984} have reported the existence of a mechanism involving oxygen in the gas phase reacting with adsorbed \ce{NH_x} species on Pt(111) for the production of \ce{NO}, evidence of which was not observed in recent studies.
 
-At ultra-high vacuum (UHV), the rotated hexagonal reconstruction of clean Pt(100) was found to impinge on \ce{NH_3} de-hydrogenation at low temperature (\qty{-123}{\degreeCelsius}) \parencite{Bradley1997}.
+At ultra-high vacuum (UHV), the rotated hexagonal reconstruction of clean Pt(100) \parencite{Hammer2016} was found to impinge on \ce{NH_3} de-hydrogenation at low temperature (\qty{-123}{\degreeCelsius}) \parencite{Bradley1997}.
 Between \qty{125}{\degreeCelsius} and \qty{350}{\degreeCelsius}, the ammonia oxidation stabilises the (1x1) phase by the formation of \ce{NH_x} intermediates \parencite{Rafti2007}.
 
 % steps
@@ -222,7 +223,7 @@ The importance of steps at ambient pressure was revealed to be most important wh
 Moreover, it was shown that the adsorbed \ce{NH_3} hopping rate (that describes the mobility or diffusion of \ce{NH_3}) is close to its desorption rate on Pt(111) terrace sites, making it unlikely to reach the steps where it may react rather than desorb from the catalyst surface \parencite{Borodin2021}.
 
 % tap, kinetic studies
-Rebrov et al. \parencite*{Rebrov2002} detailed the reaction kinetics and mechanism with a 13 step, temperature dependent model, the parameters of which have been refined with data collected from the reactant and product partial pressures evolution in a micro-reactor.
+Rebrov et al. \parencite*{Rebrov2002} detailed the reaction kinetics and mechanism with a 13 step, temperature dependent model, the parameters of which have been refined with data collected from the reactants and products partial pressures evolution in a micro-reactor.
 A wide range of conditions was explored, including ambient pressures of \ce{NH3} (\qtyrange{0.01}{0.12}{\bar}) and \ce{O_2} (\qtyrange{0.10}{0.88}{\bar}), in a large temperature range (\qtyrange{250}{400}{\degreeCelsius}).
 A dual adsorption site mechanism was proposed, with a preference for hollow site for oxygen species, and for top or bridge sites for nitrogen species, while \ce{NO} species have been reported to exist on both top and bridge sites.
 
@@ -247,7 +248,7 @@ Van den Broek et al. \parencite*{vandenBroek1999} first hypothesised that \ce{NO
 \ce{N_2} was hypothesised to be produced from the association of two adsorbed nitrogen atoms, after the de-hydrogenation process.
 Previous works mentioning oxidation of adsorbed ammonia by gas phase atoms was contradicted.
 (ii) the known roughening process of the catalyst at working conditions could not be reproduced without long working times, and high pressures.
-Kinetic studies on poly-crystalline Pt up to \qty{10}{\bar} but at temperatures below \qty{385}{\degreeCelsius} observed the roughening transition \parencite{Kraehnert2008}, which proved difficult to fit with develop kinetic models, attributed to local increase in temperature and surface area.
+Kinetic studies on poly-crystalline Pt up to \qty{10}{\bar} but at temperatures below \qty{385}{\degreeCelsius} observed the roughening transition \parencite{Kraehnert2008}, which proved difficult to fit with developped kinetic models, attributed to local increase in temperature and surface area.
 
 % DFT
 \begin{figure}[!htb]
@@ -274,7 +275,7 @@ A high energy barrier for \ce{NO} desorption and \ce{N_2O} formation explain the
 
 % conclude
 Despite the large amount of work in the previous and current century, the mechanism of the oxidation of ammonia is still unclear.
-Studies performed at ultra high vacuum have paved the way for the understanding of model catalysis systems, followed by works at progressively higher pressures, but without reaching industrial conditions during \textit{operando} studies on model systems.
+Studies performed at ultra high vacuum have paved the way for the understanding of model catalyst systems, followed by works at progressively higher pressures, but without reaching industrial conditions during \textit{operando} studies on model systems.
 Moreover, many characterisation of used catalysts have been performed \textit{ex-situ}.
 
 This shows that the complete understanding of the mechanisms ruling heterogeneous catalysis comes from developing novel methods, compatible with very high pressures and temperatures, especially when aiming at the study of a complex system with many competing reactions.
@@ -283,13 +284,15 @@ Cross checking such information with results gathered on model systems at indust
 
 Replacing precious metals in industrial reactor can be thought as the natural step that will follow the comprehension of the reaction mechanism.
 For example, the performance of new material has already been explored with \ce{V_2O_5} catalyst, reaching promising \ce{NO} yields at atmospheric pressure between \qtyrange{300}{650}{\degreeCelsius} \parencite{Ruan2022}.
+Enabling selective mechanisms to function at lower working temperature can also result in a large economy of energy.
 
 \section{Environmental impact}
 
 \subsection{Greenhouse effect}
 
 As illustrated earlier in fig. \ref{fig:FertilizerWID}, nitrogen-based fertilisers have permitted an industrial development of agriculture.
-Fertilisers can be either ammonium- or nitrate-based, when plants do not fully absorb all the nutrients, a series of microbe-mediated transformations occur which leads to the release of nitrogen back into the atmosphere, primarily as nitrogen gas (\ce{N_2}) and, to a lesser extent, as \ce{N_2O}.
+Fertilisers can be either ammonium- or nitrate-based.
+When plants do not fully absorb all the nutrients, a series of microbe-mediated transformations occur which leads to the release of nitrogen back into the atmosphere, primarily as nitrogen gas (\ce{N_2}) and, to a lesser extent, as \ce{N_2O}.
 
 For an equal amount of \ce{N_2O} and \ce{CO_2}, nitric oxide will trap \num{298} times more heat than the carbon dioxide over the next 100 years \parencite{MITCLIMATE}, responsible for \qty{6.2}{\percent} of the total U.S.A. greenhouse gases emissions in 2021 (fig. \ref{fig:PieGreenhouseNO2}).
 Moreover, the production of the necessary ammonia which is in turn used for fertilisers often relies on natural gas to provide hydrogen, meaning that each ton of \ce{NH_3} produced is equivalent to the emission of \qty{1.9}{\tonne} of \ce{CO_2} \parencite{Rafiqul2005, Chen2018}.
@@ -398,7 +401,7 @@ They are thus considered a good approximation of real catalysts \parencite{Somor
 Studies have shown that nanoparticle surface strain can be controlled, opening up a new path to tune and optimise nanoparticle catalysts \parencite{Zhang2014, Sneed2015, Wang2016}.
 
 % introduce bcdi
-Bragg coherent diffraction imaging (BCDI) is a young technique \parencite{Robinson2001}, recently applied to catalysis \parencite{Ulvestad2016}, that can only be applied to sub-micron samples due to instrumental limitations \parencite{Marchesini2003a}.
+Bragg coherent diffraction imaging (BCDI) is a young technique \parencite{Robinson2001}, only recently applied to catalysis \parencite{Ulvestad2016}, that can only be applied to sub-micron samples due to instrumental limitations \parencite{Marchesini2003a}.
 Indeed, the sample can not be larger than the coherence lengths of the beam, about \qty{1}{\um} at $3^{rd}$ generation synchrotrons.
 The x-ray beam, focused by some optical elements to micrometer size to respect this requirement, must fully illuminate the sample during the experimental process.
 Therefore, BCDI can contribute to reducing the material gap in heterogeneous catalysis.
