--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -17,7 +17,7 @@ The evolution of the interplanar spacing as a function of the temperature (fig. 
 
 % Ammonia ox
 The oxidation of ammonia has been extensively studied by the means of surface techniques in the previous and current century as detailed in sec. \ref{sec:LiteratureAmmonia}.
-Since BCDI is still a recent technique first applied to catalysis less than 10 years ago \parencite{Ulvestad2016}, no comparative measurements could be found during the presence of ammonia or nitrogen based species.
+Since BCDI is still a recent technique, first applied to catalysis less than 10 years ago \parencite{Ulvestad2016}, no comparative measurements could be found during the presence of ammonia or nitrogen based species.
 
 % Particle A
 The introduction of ammonia in the reactor at \qty{600}{\degreeCelsius} was linked to an inversion of the average facet strain for particle \textit{A} (fig. \ref{fig:AmaterasuStrain}), together with the appearance of a dislocation network at the interface with the substrate (fig. \ref{fig:AmaterasuB}).
@@ -69,7 +69,8 @@ The absence of strain evolution in the same condition for particle \textit{C} (f
 The introduction of oxygen slightly decreases the heterogeneous strain in the particle (fig. \ref{fig:B7FWHM}), the in-plane heterogeneous strain is stable during the oxidation of ammonia while the out-of-plane heterogeneous strain increases slightly.
 Thus, small changes are already visible at \qty{300}{\degreeCelsius} for particle \textit{B} during the oxidation of ammonia.
 The most impressive evolution for particle \textit{B} occurs at \qty{400}{\degreeCelsius}, with the appearance of a defect, characterised by a second peak in the 3D scattered intensity, shifted in $\vec{q}_y$ with respect to the Bragg peak (fig. \ref{fig:B7Ortho}).
-The influence of the defect in both the heterogeneous (fig. \ref{fig:B7FWHM}, fig. \ref{fig:B7SFE}) and homogeneous strain (fig. \ref{fig:B7Latpara}) is clear once the \ce{O_2}/\ce{NH_3} ratio is equal to one, a non reversible increase of homogeneous and heterogeneous strain is observed.
+The influence of the defect in both the heterogeneous (fig. \ref{fig:B7FWHM}, fig. \ref{fig:B7SFE}) and homogeneous strain (fig. \ref{fig:B7Latpara}) is clear once the \ce{O_2}/\ce{NH_3} ratio is equal to one.
+A non reversible increase of homogeneous and heterogeneous strain is observed.
 Indeed, if the defect appeared during the increase of temperature to \qty{400}{\degreeCelsius}, the particle shape and strain state seems to be stable until specific reaction conditions are achieved.
 To safely link defect dynamics and catalytic activity, several oxidation cycles would have to be measured, as well as an exposition of the particle to progressive amount of oxygen.
 Nevertheless, it can safely be said that the evolution of particle \textit{B} seems to follow the reported activation and reconstruction process of industrial catalyst by defects reported by Hannevold et al. \parencite*{Hannevold2005}.
@@ -79,11 +80,11 @@ The exposition of platinum nanoparticles epitaxied on glassy carbon to oxygen at
 The nanoparticles were not exposed to oxygen without ammonia during this experiment.
 Nevertheless, a similar expansion was observed on particle \textit{C} but during reacting conditions, and only at \qty{300}{\degreeCelsius} (fig. \ref{fig:D6Latpara}, up by \qty{0.07}{\percent}).
 Further increasing the oxygen pressure at \qty{300}{\degreeCelsius} did not have a significant effect on the homogeneous strain.
-The increase of strain on particle \textit{B} under reacting conditions in not reversible when removing the reagents, and not observed at \qty{400}{\degreeCelsius}.
+The increase of strain on particle \textit{B} under reacting conditions in not reversible when removing the reactants, and not observed at \qty{400}{\degreeCelsius}.
 This means that if oxides have grown under reacting conditions at \qty{300}{\degreeCelsius}, they are stable throughout the experiment, and not removed by the sole presence of ammonia at \qty{400}{\degreeCelsius}.
 Questions on Pt nanoparticles remain, do platinum oxides grow on the sample surface, and are they stable under reacting conditions?
 Experiments on single crystals will yield completing information to answer this question (chapter 4).
-Moreover, a different behaviour is observed for particle \textit{B}, for which the homogeneous strain does not evolve with oxygen at \qty{300}{\degreeCelsius} (fig. \ref{fig:D6Latpara}), which would necessarily link the growth of surface oxides to the particle shape, facet coverage, and initial strain state.
+Moreover, a different behaviour is observed for particle \textit{B}, for which the homogeneous strain does not evolve with oxygen at \qty{300}{\degreeCelsius} (fig. \ref{fig:B7Latpara}), which would necessarily link the growth of surface oxides to the particle shape, facet coverage, and initial strain state.
 Kim et al. \parencite*{Kim2018} have also shown that the introduction of oxygen was followed by its adsorption on edge sites, visible by magnitude changes in the neighbouring displacement field.
 Their hypothesis could be at the origin of different nano catalyst reshaping phenomena measured during the oxidation of \ce{CO} \textit{via} SXRD \parencite{Nolte2008, Hejral2016}, TEM \parencite{Vendelbo2014} and also other BCDI studies \parencite{Abuin2019}.
 No reshaping of the particles \textit{B} or \textit{C} was observed during the study of the ammonia oxidation with BCDI.
@@ -112,8 +113,8 @@ The reaction product partial pressures can be seen to drop in the minutes follow
 From the evolution of the strain field energy, the interplanar spacing, and the FWHM, it is likely that the magnitude of the defect appearing at \qty{400}{\degreeCelsius} under inert atmosphere has been increased from the reaction, which irreversibly transformed the particle shape.
 Defect dynamics have also been reported during the catalytic oxidation of \ce{CO} on Pt nanoparticles \parencite{Carnis2021b} using BCDI.
 These results tend to support the importance of defects in the catalytic activity of nanoparticles during the oxidation of ammonia.
-The defect introduced by heating at \qty{400}{\degreeCelsius} has probably altered the adsorption properties of particle \textit{B}, possibly creating steps on top of particle surface.
-Interestingly the change in the particle strain field is only visible after a certain \ce{O_2}/\ce{NH_3} ratio is reached (fig. \ref{fig:B7SFE}, \ref{fig:B7FWHM}), which can be linked to a transition to the adsorption of oxygen rich species (e.g. \ce{NO}, \ce{N_2O}) on the catalyst surface.
+The defect introduced by heating at \qty{400}{\degreeCelsius} has probably altered the adsorption properties of particle \textit{B}, possibly creating e.g. steps on top of the particle surface.
+Interestingly the change in the particle strain field is only visible after a certain \ce{O_2}/\ce{NH_3} ratio is reached (fig. \ref{fig:B7SFE}, \ref{fig:B7FWHM}), which can be linked to a transition to the adsorption of oxygen rich species (e.g. \ce{O}, \ce{OH}, \ce{NO}, \ce{N_2O}) on the catalyst surface.
 The reproducibility of the result at \qtylist{300;400}{\degreeCelsius} for particle \textit{C} for the same exposition time allow us to safely rule out the possibility of beam induced structural changes in particle \textit{C}.
 
 % RGA
@@ -130,9 +131,9 @@ SXRD measurements have unveiled the $\alpha$-\ce{Al_2O_3}(0001)-$\begin{pmatrix}
 The Pt nanoparticles exhibit distinct in-plane orientations, with their c-axis aligning along the [111] direction.
 Notably, during ammonia oxidation, no change of the epitaxial relationship between the particles and the substrate has been observed.
 
-In our ensemble-averaged SXRD experiment on the Pt particle assembly, we have demonstrated that the particles are highly faceted, showing both low and high-index facets: \{100\}, \{110\}, \{111\} and \{113\} facets.
+During the SXRD experiment on the Pt particle assembly, we have demonstrated that the particles are highly faceted, showing both low and high-index facets: \{100\}, \{110\}, \{111\} and \{113\}.
 Interestingly, reshaping of the particles occurs at \qty{600}{\degreeCelsius}, and depends on the gas conditions.
-Reacting conditions favour \{111\} and \{001\} facets over \{110\}- and \{113\}-type facets.
+A high \ce{O2} / \ce{NH3} ratio favours \{111\} and \{001\} facets over \{110\} and \{113\} facets.
 The catalyst light-off temperatures for the production of \ce{N2}, \ce{NO} and \ce{N2O} are \qtylist{300;450;550}{\degreeCelsius}, respectively.
 Selectivity analysis in the temperature range of \qtyrange{300}{600}{\degreeCelsius} reveals a preference for \ce{N2} over \ce{NO} and \ce{N2O}, except at \qty{600}{\degreeCelsius} and high oxygen partial pressures.
 
@@ -144,7 +145,7 @@ A flash annealing of the particle at \qty{800}{\degreeCelsius} allowed to remove
 During thermal annealing under inert atmosphere (Ar), an important reshaping of the particle has been observed between \qtylist{250;350}{\degreeCelsius}, demonstrating the mobility of the Pt atoms at a rather low temperature.
 At \qty{600}{\degreeCelsius}, facets of same structure (e.g. \{111\}) but at different distances with the interface experience opposite strain variation, suggesting an influence of support strain on the particle.
 Interestingly, flowing \ce{NH3} at \qty{600}{\degreeCelsius} induced an inversion of the out-of-plane strain at each facet, and the formation of a dislocation network at substrate interface.
-As the particle was not stable during the oxidation of ammonia at \qty{600}{\degreeCelsius} (possibly linked to the existence of the dislocation network), two other particles have been measured at lower temperatures: \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, before and after the temperature light off.
+As the particle was not stable during the oxidation of ammonia at \qty{600}{\degreeCelsius} (possibly linked to the existence of the dislocation network), two other particles have been measured at lower temperatures: \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, before and after the catalyst light off.
 
 The two other particles, \textit{B} and \textit{C}, show a different morphology (size, aspect ratio and types of facets), particle \textit{C} is for example not covered by \{113\} facets.
 They show as well different behaviours during the oxidation of ammonia.
