--- a/Sections/4_Results_SingleCrystals/111.tex
+++ b/Sections/4_Results_SingleCrystals/111.tex
@@ -459,9 +459,9 @@ Different reacting conditions are related to the same direction of displacement 
 \subsection{Surface species}
 
 To link surface structure, surface moieties and reaction products, the Pt 4f, N 1s and O 1s XPS spectra were recorded at near ambient pressure at the B07 beamline (Diamond Light Source), at \qty{450}{\degreeCelsius}.
-The same sequence of conditions in the ammonia oxidation cycle was repeated as for the SXRD experiment, with the same ratio between reagents.
+The same sequence of conditions in the ammonia oxidation cycle was repeated as for the SXRD experiment, with the same ratio between reactants.
 
-To keep the total pressure in a range compatible with the setup, all the measurements were performed without carrier gas and with a reagent pressure one order of magnitude lower than the SXRD experiments.
+To keep the total pressure in a range compatible with the setup, all the measurements were performed without carrier gas and with a reactant pressure one order of magnitude lower than the SXRD experiments.
 The conditions have been resumed in tab. \ref{tab:ConditionsXPS}.
 Thanks to the geometry of the B07 beamline, the mass spectrometer allows us to monitor the presence of the reactants and products close to the sample surface (fig. \ref{fig:SampleSXRD} - c).
 The gas composition in the vicinity of the sample surface is reported in fig. \ref{fig:XPS111RGA}.
@@ -481,7 +481,7 @@ After setting an inert atmosphere in the chamber, the oxidation cycle starts by 
 \qty{1.1}{\milli\bar} of \ce{NH_3} is then introduced in the reactor so that the \ce{O_2}/\ce{NH_3} partial pressure ratio becomes equal to \num{8}.
 This favours the production of \ce{NO} as expected, accompanied by a high amount of water, small amounts of \ce{N_2} and \ce{N_2O} can also be detected.
 Despite the high pressure of oxygen in the reactor, approximately half of the pressure of ammonia is still detected.
-The complete oxidation of ammonia may be limited by the availability of active sites, the transportation of reagents towards the catalyst surface or the relatively low temperature compared to industrial conditions (\qty{>700}{\degreeCelsius}) which can for example impact the active sites turnover frequency.
+The complete oxidation of ammonia may be limited by the availability of active sites, the transportation of reactants towards the catalyst surface or the relatively low temperature compared to industrial conditions (\qty{>700}{\degreeCelsius}) which can for example impact the active sites turnover frequency.
 
 Reducing the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} by lowering the oxygen pressure has the remarkable effect of shifting the reaction selectivity \textit{entirely} towards \ce{N_2}, water is still the main product (fig. \ref{fig:XPS111RGA}).
 \ce{H_2} coming from the simultaneous dissociation of \ce{NH_3} can be measured, not observed under a higher pressure of oxygen, which means that this reaction is not favoured when oxygen is present in the reactor.
