--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -56,7 +56,7 @@ The intensity of this signal as a function of $L$ was measured at [H, K] = [0.5,
 %%%%%%%%%%%%%%%%%%%% o2/nh3=0.5 %%%%%%%%%%%%%%%%%%%%
 
 Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has removed the Pt(100)-($10\times10$) surface reconstructions, and induced the appearance of a hexagonal Pt(100)-Hex superstructure, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
-Removing oxygen from the reactor resulted in the progressive removal of the hexagonal structures (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reagents.
+Removing oxygen from the reactor resulted in the progressive removal of the hexagonal structures (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reactants.
 Another key difference with Pt(111) is reported in the XPS spectra for Pt(100), with the visible presence of oxygen species in the O 1s level during reacting condition when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} (fig. \ref{fig:O1sN1sPt100}), but not when this ratio is reduced to \num{0.5} by lowering the oxygen pressure.
 No adsorbed nitrogen specie was identified when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} in the N 1s level  (fig. \ref{fig:O1sN1sPt100}).
 Therefore, the Pt(100)-($10\times10$) surface reconstruction can be linked to the presence of a surface oxide on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanism.
@@ -154,11 +154,11 @@ The presence of bulk \ce{Pt_3O_4} is clearly ruled out.
 Nevertheless, it is possible that the reconstruction is due to the interaction of surface \ce{Pt_3O_4} with ammonia, resulting in an increased selectivity towards \ce{NO}.
 Reducing the oxygen to ammonia ratio is linked to the reconstruction removal, the stopping of \ce{NO} production, as well as the removal of the adsorbed oxygen peak in the O 1s level.
 
-The formation of \ce{RhO2} was observed on a Pt-Rh(100) single crystal by Resta et al. \parencite*{Resta2020a} at similar reagent partial pressures (total pressure of \qty{300}{\milli\bar}, \qty{3.5}{\milli\bar} of ammonia, and from \qtyrange{0}{20}{\milli\bar} of oxygen).
+The formation of \ce{RhO2} was observed on a Pt-Rh(100) single crystal by Resta et al. \parencite*{Resta2020a} at similar reactant partial pressures (total pressure of \qty{300}{\milli\bar}, \qty{3.5}{\milli\bar} of ammonia, and from \qtyrange{0}{20}{\milli\bar} of oxygen).
 The rhodium surface oxide signal is only clearly measured when \ce{O2}/\ce{NH3} $>2$, and escalates when the temperature is increased from \qtyrange{175}{375}{\degreeCelsius}.
 Both change of conditions are also linked to higher selectivity towards \ce{NO}.
 The presence of this rhodium surface oxide is possibly impinging on the formation of \ce{Pt3O4} on Pt(100), observed in the current experiment, but at an oxygen partial pressure \num{4} times higher.
 This would explain the role of rhodium in stabilising the catalyst surface \parencite{Fierro1990, Fierro1992, Bergene1996}, since platinum oxides have been reported to be more volatile at higher temperature \parencite{Alcock1960}.
 \ce{Rh2O3} has been observed at elevated oxygen pressure on the same Pt-Rh(100) model crystal \parencite{Westerstrom2008}.
-It is of key importance to increase the reagent partial pressure in future studies to be able to understand the role of platinum and rhodium oxides in the ammonia oxidation, facilitated now that in-plane signals have been detected.
+It is of key importance to increase the reactant partial pressure in future studies to be able to understand the role of platinum and rhodium oxides in the ammonia oxidation, facilitated now that in-plane signals have been detected.
 This can help in the comprehension of the mechanisms driving the selectivity towards \ce{NO}.
