--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -38,7 +38,7 @@ To ensure that any surface relaxation effects are attributed to the simultaneous
 Subsequent introduction of ammonia (3) facilitated the examination of existing surface oxides' impact on catalyst selectivity during the reaction, as well as their stability under reaction conditions.
 Two different partial pressures of oxygen were employed alongside the same partial pressure of ammonia (3, 4), to investigate the influence of the \ce{O_2}/\ce{NH_3} ratio on the catalyst structure, surface species, and selectivity.
 Maintaining only ammonia in the reactor (5) enabled the separation of the effect of ammonia's presence from the combined presence of ammonia and oxygen.
-Lastly, the sample surface was exposed to a reduced pressure of oxygen, to make certain that the phenomena observed when lowering the \ce{O_2}/\ce{NH_3} ratio by reducing the oxygen pressure are effectively due to the combined presence of the reagents.
+Lastly, the sample surface was exposed to a reduced pressure of oxygen, to make certain that the phenomena observed when lowering the \ce{O_2}/\ce{NH_3} ratio by reducing the oxygen pressure are effectively due to the combined presence of the reactants.
 
 \begin{table}[!htb]
 \centering
