--- a/Sections/5_Conclusion/Conclusion.tex
+++ b/Sections/5_Conclusion/Conclusion.tex
@@ -105,7 +105,7 @@ Single crystal studies allow to better isolate the behaviours of single facets o
 
 This thesis has underlined the importance of bridging the material gap, by combining model catalysts with samples approaching the shape of industrial samples.
 The structure evolution of Pt nanoparticles was shown to strongly depend on their size, shape, facet coverage and initial strain state.
-The ammonia oxidation, which posses at least four different products, and a selectivity dependant on the reagent ratio, working temperature, and total pressure, draws a multi-dimensional parameter space only correctly addressed with information of different nature.
+The ammonia oxidation, which posses at least four different products, and a selectivity dependant on the reactant ratio, working temperature, and total pressure, draws a multi-dimensional parameter space only correctly addressed with information of different nature.
 
 BCDI has proven to be powerful, but limited by the reconstruction process, as well as the time needed to find and image isolated nanoparticles.
 Significant progress has already been made at the European synchrotron at the ID01 beamline, where rocking curves can be acquired under a minute.
@@ -128,7 +128,7 @@ The development of efficient simulation workflows to understand and de-correlate
 The development of x-ray techniques that can bring higher statistics in the study of individual nanoparticles must be pushed forward.
 In this perspective, x-ray Bragg ptychography is a technique that should receive increased interest since the measurement process can provide a unique solution.
 
-The upgrade of synchrotrons is of key importance to efficiently navigate between different temperatures/pressures/reagent ratios.
+The upgrade of synchrotrons is of key importance to efficiently navigate between different temperatures/pressures/reactant ratios.
 For SXRD and BCDI, a reduced counting time will help catch transient structures, while increased photon count will increase the possibility to detect weak second and third order signals.
 Moreover, BCDI gains from the increased coherent flux, while NAP-XPS also benefits from the increased photon flux.
 Reaction cycles could also be repeated to increase the results significance, while changing the steps order.
