Add nice nature paper about ammonia

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -38,7 +38,7 @@ Seven years after the discovery, in 1909, Fritz Haber designed a process for the
 It is today known as the Haber-Bosch process, and is at the origin of the mass production of ammonia using metallic catalysts \parencite{Hosmer1917, Parsons1919}.
 Fritz Haber received the Nobel prize in 1918 \textit{"for the synthesis of ammonia from its elements"} \parencite{Alexander1920} and Carl Bosch in 1931 \textit{“in recognition of his contributions to the invention and development of chemical high pressure methods”}.
 
-Since the discovery of the Ostwald and Haber-Bosch processes that allowed the mass production of nitrogen-based fertilisers, the world population increase has been relying on their production and use for agriculture.
+Since the discovery of the Ostwald and Haber-Bosch processes that allowed the mass production of nitrogen-based fertilisers, the world population increase has been relying on their production and use for agriculture \parencite{Erisman2008}.
 Today, about \qty{50}{\percent} of the world population relies on nitrogen-based fertilisers to produce the food necessary to their alimentation (fig. \ref{fig:FertilizerWID}).
 
 \begin{figure}[!htb]
