--- a/references.bib
+++ b/references.bib
@@ -5767,6 +5767,21 @@ author = {J.W. Erisman and A. Bleeker and J. Galloway and M.S. Sutton},
 keywords = {Reduced nitrogen, Emission, Nitrogen cycle, Ammonia, Effects, Abatement},
 }
 
+@Article{Erisman2008,
+author={Erisman, Jan Willem and Sutton, Mark A. and Galloway, James and Klimont, Zbigniew and Winiwarter, Wilfried},
+title={How a century of ammonia synthesis changed the world},
+journal={Nature Geoscience},
+year={2008},
+month={Oct},
+day={01},
+volume={1},
+number={10},
+pages={636-639},
+abstract={On 13 October 1908, Fritz Haber filed his patent on the ``synthesis of ammonia from its elements'' for which he was later awarded the 1918 Nobel Prize in Chemistry. A hundred years on we live in a world transformed by and highly dependent upon Haber--Bosch nitrogen.},
+issn={1752-0908},
+doi={10.1038/ngeo325},
+}
+
 @article{Shabalin2017,
   title = {Dynamical effects in Bragg coherent x-ray diffraction imaging of finite crystals},
   author = {Shabalin, A. G. and Yefanov, O. M. and Nosik, V. L. and Bushuev, V. A. and Vartanyants, I. A.},
