Edit SFE equation

--- a/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
+++ b/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
@@ -191,7 +191,7 @@ Assuming cubic symmetry and isotropic shear-free conditions within the unit cell
 Here, $G$ and $L$ represent the material's Lame constants, which can be estimated from Young's modulus $E$ and Poisson ratio $\nu$, as described in eq. \ref{eq:GandNu} \parencite{Mavko2020}.
 
 \begin{equation}
-    E_s = \frac{2G + 3L}{2} \int \Big( \frac{\partial u_{111}}{\partial x_{111}}\Big)^2 dV
+    E_s = \frac{2G + 3L}{2} \int \epsilon_{zz}^2 dV
     \label{eq:SFE}
 \end{equation}
 
